--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
 
-  <!-- This <div> is just so each button will be on its own line -->
   <div>
-    <a class="btn" href="#">Primary button</a>
+    <a class="btn prim" href="#">Primary button</a>
   </div>
-
-  <!-- Add all other button styles here with both the <div> & <a> tags -->
+  <div>
+    <a class="btn sub" href="#">Subtle Button</a>
+  </div>
+  <div>
+    <a class="btn ghost" href="#">Ghost Button</a>
+  </div>
+  <div>
+    <a class="btn warning" href="#">Warning Button</a>
+  </div>
 
 </body>
 </html>
