--- a/index.html
+++ b/index.html
@@ -7,19 +7,45 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <div>
+    <a class="btn btn-prim" href="#">Primary button</a>
+  </div>
+  <div>
+    <a class="btn btn-sub" href="#">Subtle button</a>
+  </div>
+  <div>
+    <a class="btn btn-ghost" href="#">Ghost button</a>
+  </div>
+  <div>
+    <a class="btn btn-warning" href="#">Warning button</a>
+  </div>
 
   <div>
-    <a class="btn prim" href="#">Primary button</a>
+    <a class="btn btn-small btn-prim" href="#">Primary button small</a>
   </div>
   <div>
-    <a class="btn sub" href="#">Subtle Button</a>
+    <a class="btn btn-small btn-sub" href="#">Subtle button small</a>
   </div>
   <div>
-    <a class="btn ghost" href="#">Ghost Button</a>
+    <a class="btn btn-small btn-ghost" href="#">Ghost button small</a>
   </div>
   <div>
-    <a class="btn warning" href="#">Warning Button</a>
+    <a class="btn btn-small btn-warning" href="#">Warning button small</a>
   </div>
+
+    <div>
+      <a class="btn btn-big btn-prim" href="#">Primary button</a>
+    </div>
+    <div>
+      <a class="btn btn-big btn-sub" href="#">Subtle button</a>
+    </div>
+    <div>
+      <a class="btn btn-big btn-ghost" href="#">Ghost button</a>
+    </div>
+    <div>
+      <a class="btn btn-big btn-warning" href="#">Warning button</a>
+    </div>
+  </section>
 
 </body>
 </html>
