Change buttons to big

--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
   </div>
 
     <div>
-      <a class="btn btn-big btn-prim" href="#">Primary button</a>
+      <a class="btn btn-big btn-prim" href="#">Primary button big</a>
     </div>
     <div>
-      <a class="btn btn-big btn-sub" href="#">Subtle button</a>
+      <a class="btn btn-big btn-sub" href="#">Subtle button big</a>
     </div>
     <div>
-      <a class="btn btn-big btn-ghost" href="#">Ghost button</a>
+      <a class="btn btn-big btn-ghost" href="#">Ghost button big</a>
     </div>
     <div>
-      <a class="btn btn-big btn-warning" href="#">Warning button</a>
+      <a class="btn btn-big btn-warning" href="#">Warning button big</a>
     </div>
   </section>
 
