--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <div>
-    <a class="btn btn-prim" href="#">Primary button</a>
+    <a class="btn btn-primary" href="#">Primary button</a>
   </div>
   <div>
-    <a class="btn btn-sub" href="#">Subtle button</a>
+    <a class="btn btn-subtle" href="#">Subtle button</a>
   </div>
   <div>
     <a class="btn btn-ghost" href="#">Ghost button</a>
@@ -21,10 +21,10 @@
   </div>
 
   <div>
-    <a class="btn btn-small btn-prim" href="#">Primary button small</a>
+    <a class="btn btn-small btn-primary" href="#">Primary button small</a>
   </div>
   <div>
-    <a class="btn btn-small btn-sub" href="#">Subtle button small</a>
+    <a class="btn btn-small btn-subtle" href="#">Subtle button small</a>
   </div>
   <div>
     <a class="btn btn-small btn-ghost" href="#">Ghost button small</a>
@@ -34,10 +34,10 @@
   </div>
 
   <div>
-    <a class="btn btn-big btn-prim" href="#">Primary button big</a>
+    <a class="btn btn-big btn-primary" href="#">Primary button big</a>
   </div>
   <div>
-    <a class="btn btn-big btn-sub" href="#">Subtle button big</a>
+    <a class="btn btn-big btn-subtle" href="#">Subtle button big</a>
   </div>
   <div>
     <a class="btn btn-big btn-ghost" href="#">Ghost button big</a>
